Prevent the tooltip contents from wrapping

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
 	border: 1px solid #eee;
 	padding: 3px;
 	position: absolute;
+	white-space: nowrap;
 }
 .tooltip p {
 	color: #fff;
